--- a/simon.html
+++ b/simon.html
@@ -25,12 +25,12 @@
     <h2 class="highest"></h2>
     <div class="btn-container">
       <div class="line-one">
-        <div class="btn yellow" type="button" id="yellow">1</div>
-        <div class="btn red" type="button" id="red">2</div>
+        <div class="btn yellow" type="button" id="yellow"></div>
+        <div class="btn red" type="button" id="red"></div>
       </div>
       <div class="line-two">
-        <div class="btn purple" type="button" id="purple">3</div>
-        <div class="btn green" type="button" id="green">4</div>
+        <div class="btn purple" type="button" id="purple"></div>
+        <div class="btn green" type="button" id="green"></div>
       </div>
     </div>
     <input type="button" value="Restart" id="restart-btn" />
