--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="simonstyle.css" />
-    <title>Simon Game</title>
+    <title>Simon Memory Game</title>
   </head>
   <body>
     <h1
@@ -21,7 +21,7 @@
       🧠 Simon Memory Game
     </h1>
 
-    <h2>Press any key to start the game</h2>
+    <h2>Press Start button to start the game</h2>
     <h2 class="highest"></h2>
     <div class="btn-container">
       <div class="line-one">
@@ -33,7 +33,11 @@
         <div class="btn green" type="button" id="green"></div>
       </div>
     </div>
-    <input type="button" value="Restart" id="restart-btn" />
+    <div class="controls">
+      <button id="start-btn" class="game-btn">Start</button>
+      <button id="restart-btn" class="game-btn">Restart</button>
+    </div>
+
     <script src="simonapp.js"></script>
   </body>
 </html>
